--- a/CSS/style15.css
+++ b/CSS/style15.css
@@ -678,16 +678,17 @@ background-color: #268ecd;
                 
                     }
                     .cont1 .dash{
-                        display: flex;
-                        flex-direction: column;
-                       text-align: center;
-                        align-items: center;
-                        
-                width: 80%;
-                height: 100%;
-                
-                
-                background-color: #313e54;
+                      display: flex;
+                      flex-direction: column;
+                     text-align: center;
+                      align-items: center;
+                      overflow: hidden;
+              width: 80%;
+              height: 100%;
+              
+              
+              background-color: #313e54;
+              
                 
                 
                 
@@ -720,13 +721,16 @@ background-color: #268ecd;
                 
                     }
                     .cont1 .t1{
-                        display: flex;
-                width: 100%;
-                height: 20%;
-                font-size: 0.7vh;
-                color: beige;
-                font-family:hatton;
-                margin-top: 2.5vh;
+                      display: flex;
+              
+                      width: 100%;
+                      height: 100%;
+                      
+                      font-size: 1.7vw;
+                      text-align: center;
+                      color: beige;
+                      font-family:hatton;
+                      margin-top: 12%;
                 
                 
                 
