--- a/CSS/style6.css
+++ b/CSS/style6.css
@@ -348,15 +348,15 @@ height: 80%;
     }
     .cont1 .dash{
         display: flex;
-        flex-direction: column;
-       text-align: center;
-        align-items: center;
+                flex-direction: column;
+               text-align: center;
+                align-items: center;
+                overflow: hidden;
+        width: 80%;
+        height: 100%;
         
-width: 80%;
-height: 100%;
-
-
-background-color: #313e54;
+        
+        background-color: #313e54;
 
 
 
@@ -390,12 +390,15 @@ width: 100%;
     }
     .cont1 .t1{
         display: flex;
-width: 100%;
-height: 20%;
-font-size: 0.7vh;
-color: beige;
-font-family:hatton;
-margin-top: 2.5vh;
+              
+        width: 100%;
+        height: 100%;
+        
+        font-size: 1.7vw;
+        text-align: center;
+        color: beige;
+        font-family:hatton;
+        margin-top: 12%;
 
 
 
