--- a/CSS/style4.css
+++ b/CSS/style4.css
@@ -68,7 +68,8 @@ height: 20%;
     display: flex;
     flex-direction: column;
     margin-left: 13%;
-    
+    overflow-y: hidden;
+    flex-wrap: wrap;
 width: 75%;
 height: 50%;
 
@@ -122,7 +123,7 @@ height: 100%;
     }
 .texto_centro .texti{
     font-family: hatton;
-    font-size: 3vh;
+    font-size: 2.5vh;
     
 
 
@@ -297,16 +298,24 @@ height: 70%;
 
 
 }
-@media(max-width:725px){
+@media(max-width:1050px){
 
     .texto_centro .texti{
         font-family: hatton;
-        font-size: 2.5vh;
+        text-align: center;
+        font-size: 1.92vh;
         
     
     
     
     }
+    .tittle .internal_text{
+        font-family: hatton;
+        font-size: 3.2vh;
+        color: #278fce;
+        
+        
+        }
     @media(orientation:portrait){
         .contentheader{
             display: flex;
@@ -320,8 +329,9 @@ height: 70%;
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 30%;
-            height: 90%;
+            width: 40%;
+            height: 85%;
+           
             
             
             
@@ -422,7 +432,7 @@ height: 70%;
             }
         .texto_centro .texti{
             font-family: hatton;
-            font-size: 2.0vh;
+            font-size: 1.8vh;
             
         
         
