--- a/CSS/style19.css
+++ b/CSS/style19.css
@@ -3,6 +3,7 @@ padding: 0;
 margin: 0;
 box-sizing: border-box;
 
+
 }
 @font-face{
     font-family:hatton;
@@ -12,7 +13,7 @@ box-sizing: border-box;
 display: flex;
 justify-content: center;
 width: 100%;
-height: 15.vh;
+height: 15vh;
 background-color: #FF914D;
 
 }
@@ -232,6 +233,7 @@ display: flex;
 flex-direction: column;
 align-items: center;
 justify-content: flex-end;
+text-align: center;
 width: 100%;
 height: 50%;
 
@@ -244,6 +246,7 @@ font-size: 1.9vh;
             display: flex;
             flex-direction: column;
             align-items: center;
+            text-align: center;
             justify-content: flex-start;
             width: 100%;
             height: 50%;
