redisign crud gestion empleados

--- a/CSS/style21.css
+++ b/CSS/style21.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #313e54;
+    
     }
       @font-face{
         font-family:hatton;
@@ -80,8 +80,8 @@ body{
 .maincontainer{
     display: flex;
     flex-direction: row;
-width: 130vw;
-height: 120vh;
+width: 100vw;
+height: 100vh;
 background-color: #268ecd;
 
 
@@ -94,7 +94,7 @@ background-color: #268ecd;
 }
 .maincontainer .cont1{
     display: flex;
-    width: 25vw;
+    width: 23vw;
     height: 100%;
     background-color: #313e54;
 flex-direction: column;
@@ -175,8 +175,8 @@ color: beige;
 
         display: flex;
         flex-direction: column;
-        width: 106VW;
-        height: 140vh;
+        width: 80%;
+        height: 100vh;
        
 
 
@@ -258,80 +258,85 @@ background-color: orange;
     }
     .cont3{
         display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: 85%;
     background-color: #f6f6f6;
     
     
     
        }
-       .cont3 .menumin{
-        display: none;
-    width: 10%;
-    height: 100%;
-    background-color: darkgray;
-    
-    
-       }
-       .modify-buttons .create{
-        width: 90%;
-        height: 10%;
-        margin-top: 64%;
-       margin-bottom: 15%;
-        border: none;
-        background-color: #313e54;
-        color: white;
-        font-family: hatton;
-        font-size: 2vh;
-        transition: 0.5s;
-        
-        
-           }
-           .create:hover{
-            
-          
-            background-color: rgb(13, 105, 117);
-            padding: 30%;
-           
+       .cont3 .insert-title{
+        display: flex;
+        width: 100%;
+        height: 15%;
+                       }
+                       .insert-title .container-buscador {
+                        width: 25%;
+                        height: 100%;
+                        display: flex;
+                        align-items: end;
+                        justify-content: center;
+                 
+                 }
+                 
+                 .container-buscador .put-search {
+                        width: 80%;
+                        height: 40%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                 
+                 
+                 }
+                 
+                 .put-search .buscador {
+                        display: flex;
+                        width: 100%;
+                        height: 90%;
+                        font-size: 2vh;
+                        font-family: hatton;
+                        border: 0.222vw solid #268ecd;
+                        border-radius: 0.5vw;
+                        outline-offset: 0.25vh;
+                        outline-color: rgba(194, 219, 254, 1);
+                 
+                 
+                 
+                        transition: all 0.2s ease-in-out;
+                 
+                 
+                 
+                 }
+                 
+                 .buscador:focus {
+                        outline-offset: 0.4vh;
+                 
+                        outline-color: rgba(194, 219, 254, 1);
+                        border: 0.2vh solid #86B7FE;
+                        transition: all 0.2s ease-in-out;
+                 
+                 
+                 }
+                 .insert-title .titulo {
+                    width: 50%;
+                    height: 100%;
+                    display: flex;
+             
+                    justify-content: center;
+                    align-items: center;
+                    text-align: center;
+                    font-family: hatton;
+                    font-size: 3vh;
+             
              }
-           .modify-buttons .search{
-           
-            width: 90%;
-            height: 10%;
-            font-family: hatton;
-            border: none;
-            background-color: #313e54;
-            color: white;
-            font-size: 1.5vh;
-            transition: 0.5s;
-            
-            
-               }
-               .search:hover{
-                
-        
-          background-color: rgb(13, 105, 117);
-          padding: 30%;
-               }
-               .cont3 .contenedor-formulario{
-display: flex;
-justify-content: center;
-align-items: center;
-width: 100%;
-height: 100%;
-
-
-
-
-               }
                .maincontainer .container-tabla{
-display: flex;
-flex-direction: column;
-align-items: center;
-
-width: 100%;
-height: 100%;
+                width: 100%;
+                height: 85%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
 
 
 
@@ -357,105 +362,219 @@ top: 88vh;
 transition: 0.5s;
 
                }
-               .container-tabla .insert-title{
-display: flex;
-justify-content: center;
-align-items: center;
-text-align: center;
-width: 100%;
-height: 10%;
-font-family: hatton;
-font-size: 4vw;
-
-
-               }
+               
                .container-tabla .tabla{
-display: flex;
-flex-direction: column;
-
-align-self: center;
-margin-top: 5vh;
-width: 98%;
-height: 80%;
-background-color: #F6F6F6;
-overflow: hidden;
-flex-wrap: wrap;
-scroll-behavior:smooth ;
+                width: 95%;
+                height: 90%;
+                display: flex;
+                flex-direction: column;
+                background-color: #fda066;
+                border-left: solid 0.2vw black;
+                border-bottom: solid 0.2vw black;
+                border-top: solid 0.2vw black;
+                border-right: solid 0.2vw black;
+                overflow: hidden;
+                flex-wrap: wrap;
 
 
 
 
                }
                .tabla .row-subtitle{
-                display: flex;
-                width: 99.8%;
-height:5.192%;
-background-color: #268ecd;
-
-border-top: solid black;
-border-left: solid black;
+                width: 100%;
+       height: 10%;
+       display: flex;
+       background-color: #268CCA;
 
 
                }
+               .row-subtitle .put-id{
+                width: 6%;
+                height: 100%;
+                display: flex;
+                border-bottom: solid 0.2vw black;
+                border-right: solid 0.2vw black;
+                justify-content: center;
+                align-items: center;
+                font-size: 2vh;
+                font-family: hatton;
+
+               }
+               .row-subtitle .name-dueño{
+                width: 14%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                border-bottom: solid 0.2vw black;
+                border-right: solid 0.2vw black;
+                align-items: center;
+                font-size: 1.2vw;
+                font-family: hatton;
+                text-align: center;
+
+               }
+               .row-subtitle .apellido-dueño{
+                width: 14%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                border-bottom: solid 0.2vw black;
+                border-right: solid 0.2vw black;
+                align-items: center;
+                font-size: 1.2vw;
+                font-family: hatton;
+                text-align: center;
+
+
+               }
+              
                .row-subtitle .subtitle{
-display: flex;
-justify-content: center;
-align-items: center;
-border-right: solid black;
+                width: 8%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-bottom: solid 0.2vw black;
+                border-right: solid 0.2vw black;
+                font-size: 1.2vw;
+                font-family: hatton;
+                text-align: center;
 
-font-family: hatton;
-font-size: 0.8vw;
-text-align: center;
 
-width: 10%;
-height: 100%;
-background-color: #268ecd;
+               }
+               .row-subtitle .subtitle-1{
+                width: 8%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-bottom: solid 0.2vw black;
+         
+                font-size: 1.2vw;
+                font-family: hatton;
+                text-align: center;
+                overflow: hidden;
 
 
                }
                .tabla .row-empleados{
 
+                width: 100%;
+                height: 10%;
                 display: flex;
-                width: 99.8%;
-                height:5.192%;
-                background-color: cyan;
-                border-left: solid black;
-                border-bottom: solid black;
+                background-color: #FF914D;
 
                }
-               .row-empleados .info{
+               .row-empleados .put-id{
+                width: 6%;
+                height: 100%;
                 display: flex;
-                border-right: solid black;
+                border-top: solid 0.2vw black;
+                border-bottom: solid 0.2vw black;
+                border-right: solid 0.2vw black;
                 justify-content: center;
-            
                 align-items: center;
-                font-size: 1vw;
+                font-size: 2vh;
                 font-family: hatton;
-                overflow: hidden;
-                text-align: center;
-                width: 10%;
-                height: 100%;
-                background-color: rgb(247, 166, 112);
-
 
                }
-               .row-empleados .info-email{
+               .row-empleados .name-dueño{
+                width: 14%;
+                height: 100%;
                 display: flex;
-                border-right: solid black;
-                justify-content: space-between;
-         
+                justify-content: center;
+                border-top: solid 0.2vw black;
+                border-bottom: solid 0.2vw black;
+                border-right: solid 0.2vw black;
                 align-items: center;
                 font-size: 1vw;
                 font-family: hatton;
-                overflow: hidden;
                 text-align: center;
-                width: 10%;
+                overflow: hidden;
+               }
+               .row-empleados .apellido-dueño{
+                width: 14%;
                 height: 100%;
-                background-color: rgb(247, 166, 112);
+                display: flex;
+                justify-content: center;
+                border-top: solid 0.2vw black;
+                border-bottom: solid 0.2vw black;
+                border-right: solid 0.2vw black;
+                align-items: center;
+                font-size: 1vw;
+                font-family: hatton;
+                text-align: center;
+                overflow: hidden;
+
+               }
+               #email_empleado{
+                width: 14%;
+                height: 100%;
+                display: flex;
+                justify-content: start;
+                border-top: solid 0.2vw black;
+                border-bottom: solid 0.2vw black;
+                border-right: solid 0.2vw black;
+                align-items: center;
+                font-size: 1vw;
+                font-family: hatton;
+                text-align: center;
+                overflow: hidden;
 
 
                }
-               .info .edit-button{
+              
+               .row-empleados .subtitle{
+                width: 8%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-top: solid 0.2vw black;
+                border-bottom: solid 0.2vw black;
+                border-right: solid 0.2vw black;
+                font-size: 1vw;
+                font-family: hatton;
+                text-align: center;
+overflow: hidden;
+
+               }
+               .row-empleados .subtitle-1{
+                width: 8%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-top: solid 0.2vw black;
+                border-bottom: solid 0.2vw black;
+         
+                font-size: 1vw;
+                font-family: hatton;
+                text-align: center;
+                overflow: hidden;
+
+
+               }
+               .subtitle .edit-button{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 50%;
+                font-size: 2vw;
+                text-decoration: none;
+                color: black;
+height: 100%;
+border: none;
+background: none;
+transition: 0.3s;
+cursor: pointer;
+               }
+               .edit-button:hover{
+color: red;
+
+
+               }
+               .subtitle-1 .edit-button{
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -475,13 +594,13 @@ color: red;
 
                }
                .container-tabla .container-move-buttons{
+                width: 95%;
+                height: 8%;
                 display: flex;
                 justify-content: center;
               
                 align-items: center;
-                width: 98%;
-                height: 5%;
-                background-color: #313E54;
+                background-color: #313e54;
 
 
                }
