acualizacion ver info crud getsion empleado

--- a/CSS/style21.css
+++ b/CSS/style21.css
@@ -374,6 +374,7 @@ transition: 0.5s;
                 border-top: solid 0.2vw black;
                 border-right: solid 0.2vw black;
                 overflow: hidden;
+                scroll-behavior: smooth;
                 flex-wrap: wrap;
 
 
